# skills

skills/ai4mse/flyclaw/: README.md  README_EN.md  SKILL.md  SKILL_EN.md  _meta.json  config.py  config.yaml  flyclaw.py  pyproject.toml
skills/ai4mse/flyclaw/sources/: fliggy_mcp.py
skills/awaili/tc-migrate/src/: pyproject.toml  requirements.txt
skills/ayakimovich/synthclaw/: README.md  SKILL.md  _meta.json  pyproject.toml
skills/ayakimovich/synthclaw/config/: analyze_schema.json  render_schema.json
skills/ayakimovich/synthclaw/scripts/: agent_bridge.py  analyze_blends.py  create_test_blend.py
skills/ayakimovich/synthclaw/tests/: test_skills.py
skills/ayden76/gamma-feishu-supertoolkit/server/: pyproject.toml
skills/cindulasai/clawshorts-pkg/: README.md  SKILL.md  TROUBLESHOOTING.md  _meta.json  pyproject.toml
skills/cindulasai/clawshorts-pkg/scripts/: clawshorts-daemon.py  clawshorts-daemon.sh  clawshorts-healthcheck.py  clawshorts.sh  clawshorts_db.py
skills/cindulasai/clawshorts-pkg/tests/: test_device.py  test_security.py
skills/claytantor/pylinter-assist/: CLAUDE.md  SKILL.md  _meta.json  pyproject.toml
skills/claytantor/pylinter-assist/pylinter_assist/: __init__.py  cli.py  config.py  linter.py  reporter.py
skills/claytantor/pylinter-assist/scripts/: lint_pr.py  publish.sh
skills/dacervera/quorum/reference-implementation/: README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
skills/efedurmaz16/sardis/: README.md  SKILL.md  _meta.json  clawhub.json  pyproject.toml
skills/fischerlam/highlight-reels-zh/: README.md  SKILL.md  _meta.json  pyproject.toml
skills/fluxaventures/skill-openclaw/: SKILL.md  _meta.json  package.json  pyproject.toml
skills/fluxaventures/skill-openclaw/oris_mcp/: executor.py  server.py  tools.py  transport.py  usage_gate.py  worker_pool.py  zkp_tools.py
skills/frankxiong/longbridge-kit/: README.md  SKILL.md  _meta.json  pyproject.toml  requirements.txt
skills/frankxiong/longbridge-kit/longbridge_cli/: __init__.py  __main__.py  cli.py  config.py  formatters.py
skills/gandli-2025/openclaw-mlx-audio/python-runtime/: pyproject.toml  requirements.txt  stt_server.py  tts_server.py
skills/gaojiongwenv587-beep/threads-skill/: CLAUDE.md  README.md  _meta.json  pyproject.toml
skills/gaojiongwenv587-beep/threads-skill/scripts/: account_manager.py  chrome_launcher.py  cli.py  image_downloader.py  inspector.py  replied_posts.py  reply_assistant.py  reply_assistant_cli.py  run_lock.py
skills/guanqi0914/wcs-helper-feishu-skill/: QUICKSTART.md  README.md  SKILL.md  _meta.json  feishu_handler.py  pyproject.toml  requirements.txt  skill.json  skill.py
skills/guanqi0914/wcs-helper-feishu-skill/examples/: usage.md
skills/guanqi0914/wcs-helper-feishu-skill/src/: config.py  types.py  utils.py
skills/has9800/raven-memory/: README.md  _meta.json  pyproject.toml  requirements.txt  skill.md
skills/has9800/raven-memory/benchmark/: causal_mem_bench.py  test_openclaw_integration.py  test_raven_features.py  test_scale_v2.py
skills/has9800/raven-memory/tcc/: __init__.py
skills/khaney64/discogs-sync/: SKILL.md  _meta.json  pyproject.toml
skills/meimakes/gmail-no-send/scripts/: pyproject.toml
skills/michaelgold/video-skill/: BACKLOG.md  IMPLEMENTATION_REFS.md  INSTRUCTIONS.md  README.md  SKILL.md  _meta.json  config.example.json  pyproject.toml  v2-research.md
skills/michaelgold/video-skill/deploy/: docker-compose.models.yml
skills/michaelgold/video-skill/scripts/: bootstrap_models.sh
skills/michaelgold/video-skill/tests/: test_ai_adapter.py  test_chunking.py  test_cli.py  test_clips.py  test_enrich.py  test_extractor.py  test_extractor_ai.py  test_frame_plan.py  test_frames.py  test_models.py  test_providers.py  test_render.py  test_settings.py  test_transcribe.py  test_transcript.py
skills/mohnishb-ai/situation-monitor/: 02-incidents.sh  INPUT_SCHEMA.json  README.md  SKILL.md  _meta.json  main.js  package-lock.json  package.json  pyproject.toml
skills/mohnishb-ai/situation-monitor/docs/: hackathon_pitch.md  openclaw_admin_install.md
skills/mohnishb-ai/situation-monitor/examples/: apify_actor_input.json  demo_messages.json  kubewatch_incidents.json
skills/mohnishb-ai/situation-monitor/scripts/: prepare_contextual_upload.py
skills/mrb-aia/cloud-doc-intelligent-assistant/: SKILL.md  _meta.json  config.yaml  pyproject.toml
skills/mshs01156/support-to-repro-pack/: README.md  SKILL.md  _meta.json  pyproject.toml
skills/prashamshah115/portfolio-risk-desk/: README.md  SKILL.md  _meta.json  clawhub.json  intelligence_desk_brief_output_template.md  intelligence_desk_brief_tool_contract.json  pyproject.toml
skills/ranasalalali/openclaw-model-usage/: README.md  SKILL.md  _meta.json  pyproject.toml
skills/ryanchan720/email-bridge/: DESIGN.md  PROGRESS.md  README.md  SKILL.md  _meta.json  config.example.json  install.sh  openclaw.plugin.json  pyproject.toml  test_installation.py
skills/seanwyngaard/moltassist/: README.md  SKILL.md  _meta.json  pyproject.toml
skills/wenrichard/tdoc-docx/: SKILL.md  _meta.json  install.sh  pyproject.toml  requirements.txt
skills/xiaoyiyebuaijianghua/qvxianjiuguo-skills/: CLAUDE.md  README.md  SKILL.md  _meta.json  pyproject.toml
skills/xiongmao11132/auto-claw/: QUICKREF.md  README-exec.md  README-landing.md  README.md  SKILL.md  _meta.json  cli.py  dashboard.html  demo_complete.py  demo_content_audit.py  demo_dynamic_faq.py  demo_faq_output.html  demo_image_optimizer.py  demo_local.py  demo_production.py  demo_schema.py  demo_schema_inject.py  demo_seo.py  demo_seo_fix.py  install.sh  landing.html  package.json  pyproject.toml  requirements.txt  robots.txt  status.sh
skills/yxjsxy/agentmemo-karl/: 03-23roadmap.md  README.md  SKILL.md  _meta.json  benchmark.py  benchmark_results.json  client.py  database.py  embeddings.py  events.py  example_openclaw.py  install.sh  models.py  pyproject.toml  requirements.txt  server.py
skills/zhangpengle/military-bidding-tracker/: README.md  SKILL.md  _meta.json  pyproject.toml  run_tests.sh
(+34499 files in other folders)
