[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sardis-openclaw"
version = "1.0.0"
description = "OpenClaw skill for Sardis - Payment OS for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Sardis", email = "efe@sardis.sh" }]
keywords = ["sardis", "openclaw", "ai-agents", "payments", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "sardis>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://sardis.sh"
Documentation = "https://sardis.sh/docs"
Repository = "https://github.com/EfeDurmaz16/sardis"

[tool.hatch.build.targets.wheel]
packages = ["src/sardis_openclaw"]
