[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oris-mcp-server"
version = "0.2.0"
description = "Oris MCP Server: dual-transport AI agent payment tools for Claude and LangChain."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
grpc = [
    "grpcio>=1.60,<2",
    "grpcio-tools>=1.60,<2",
]
performance = [
    "uvloop>=0.19; sys_platform != 'win32'",
]
native = [
    "oris-core>=0.1.0",
]

[project.scripts]
oris-mcp = "oris_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["oris_mcp"]
