[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guanqi-feishu-config-skill"
version = "2.0.0"
description = "飞书插件配置助手 - 通过快捷指令快速配置 OpenClaw 飞书插件"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Guanqi"}
]
keywords = ["feishu", "lark", "config", "openclaw", "skill", "飞书", "配置"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities",
]

dependencies = [
    "openclaw>=2026.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/guanqi/guanqi-feishu-config-skill"
Repository = "https://github.com/guanqi/guanqi-feishu-config-skill"
Issues = "https://github.com/guanqi/guanqi-feishu-config-skill/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
