[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raven-memory"
version = "1.0.1"
description = "Persistent causal memory for AI agents. Records decisions, tool calls, and parallel work as a causal DAG. OpenClaw and MCP compatible."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "hahmed9800" }
]
keywords = ["ai", "agent", "memory", "mcp", "openclaw", "causal", "dag", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
vec = ["sqlite-vec>=0.1.0"]
dev = ["pytest>=7.0"]

[project.scripts]
raven-mcp = "tcc.integration.mcp_server:main"

[project.urls]
Homepage = "https://github.com/hahmed9800/tcc-agentic"
Repository = "https://github.com/hahmed9800/tcc-agentic"

[tool.hatch.build.targets.wheel]
packages = ["tcc"]
