[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "video-skill-extractor"
version = "0.1.0"
description = "Extract structured markdown steps from course recordings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "imageio-ffmpeg>=0.6.0",
  "pydantic>=2.8.0",
  "pydantic-ai>=1.63.0",
  "typer>=0.12.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
video-skill = "video_skill_extractor.cli:app"

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-q --cov=video_skill_extractor --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
