[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-doc-monitor"
version = "0.4.0"
description = "智能文档助手 - 多云文档监控、对比与变更检测技能库"
license = "MIT"
keywords = ["aliyun", "tencent", "baidu", "volcano", "documentation", "monitor", "skills", "ai"]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "hypothesis>=6.0.0"]

[project.scripts]
cloud-doc-skill = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
