[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligence-desk-brief"
version = "1.0.0"
description = "Portfolio Risk Desk skill package for OpenClaw and ClawHub."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
portfolio-risk-desk = "intelligence_desk_brief.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
intelligence_desk_brief = ["fixtures/*.json", "fixtures/*.md"]
