[project]
name = "openclaw-model-usage"
version = "0.1.0"
description = "Portable AgentSkill and CLI for inspecting OpenClaw model usage from local session logs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
openclaw-model-usage = "openclaw_model_usage:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
