[project]
name = "email-bridge"
version = "0.6.3"
description = "Personal email middleware for AI assistants with real-time notifications, smart categorization, and verification code extraction (Gmail, QQ Mail, NetEase)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ryan Chan", email = "ryanchan720@qq.com"}
]
keywords = ["email", "gmail", "qq-mail", "imap", "smtp", "verification-code", "notification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "imaplib2>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
email-bridge = "email_bridge.cli:main"

[project.urls]
Homepage = "https://github.com/ryanchan720/email-bridge"
Repository = "https://github.com/ryanchan720/email-bridge"
Issues = "https://github.com/ryanchan720/email-bridge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["email_bridge"]
