[project]
name = "openclaw-mlx-audio-runtime"
version = "0.1.0"
description = "Python runtime for OpenClaw mlx-audio plugin"
requires-python = ">=3.10"
dependencies = [
    "mlx-audio>=0.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
openclaw-mlx-tts-server = "tts_server:main"
openclaw-mlx-stt-server = "stt_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
